Bug 1396652: Fix WebRequestService destructor ordering issue. r=mixedpuppy

MozReview-Commit-ID: HYDNYzb5bnM